--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,5 @@
-<IfModule dir_module>
-    #DirectoryIndex index.html
-    DirectoryIndex homepage.html
-</IfModule>
-
+#remove html file extension https://www.molenzichtkoedijk.nl/homepage.html
+# to https://www.molenzichtkoedijk.nl/
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
